[project]
name = "hcc"
version = "0.1.0"
description = "A lightweight Python package for making HTTP requests with retry functionality"
authors = [
    { name="Márk Sárvári", email="mark@binarybush.dev" }
]
# TODO add license
# license = 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
addopts = "tests --cov=hcc --cov-report=html -v"

